--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
 
 body {
   height: 100vh;
   overflow: hidden;
   overscroll-behavior: none;
-  font-family: 'Inter', sans-serif !important;
+  font-family: "Inter", sans-serif !important;
 }
 
 #root {
@@ -13,77 +13,28 @@ body {
   position: relative;
 }
 
-.css-i9gxme {
-  width: 100%;
-  position: fixed;
-  top: 0;
-}
-
-.css-i9gxme .MuiPaper-elevation {
-  background-color: #045159;
-  box-shadow: none;
-}
-
-.css-19idom {
-  width: 100% !important;
-  position: fixed;
-  bottom: 0;
-}
-
-.logo {
-  width: 50px;
-  height: auto;
-  padding-top: 16px;
-}
-
-.MuiBox-root .MuiBottomNavigation-root .MuiButtonBase-root.Mui-selected {
-  color: #045159 !important;
-}
-
-.MuiTypography-root {
-  font-family: 'Inter', sans-serif !important;
-  font-weight: 300 !important;
-}
-
-.MuiTypography-p {
-  font-weight: 400 !important;
-}
-
-.profile_picture_wrapper {
-  position: fixed;
-  top: 16px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.5));
-  img {
-    -webkit-mask-image: url(./pups.svg);
-    mask-image: url(./pups.svg);
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    mask-position: -9px -11px;
-  }
-}
-
 .QrReaderCanvas {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100vh;
   section {
-    height: 100vh;
-    background-color: #000;
+    position: fixed !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    z-index: 9 !important;
+    border-radius: 25px !important;
+    padding: 1rem !important;
+    margin-bottom: 100px !important;
     div {
-      position: unset !important;
-      padding-top: 0 !important;
+      border-radius: 20px !important;
+      overflow: hidden !important;
+      position: relative !important;
+      padding-top: unset !important;
+      box-shadow: 5px 5px 20px 0px rgb(64 64 64 / 65%);
+      background-color: #000;
+      video {
+        position: relative !important;
+        left: 0 !important;
+        top: 0 !important;
+        opacity: 1 !important;
+      }
     }
   }
-}
-
-.MuiIconButton-colorSecondary {
-  color: #ffffff !important;
-  justify-content: flex-end !important;
-  position: absolute !important;
-  right: 0 !important;
-  top: 0 !important;
 }
